fix static init